# Make all aliases public by default
package(default_visibility = ["//visibility:public"])

###############################################################################
# Common
###############################################################################

alias(
    name = "common_config",
    actual = "//alpha_common/common_config",
)

alias(
    name = "common_data_bar",
    actual = "//alpha_common/common_data_bar",
)

alias(
    name = "common_database",
    actual = "//alpha_common/common_database",
)

alias(
    name = "common_env",
    actual = "//alpha_common/common_env",
)

alias(
    name = "common_exchange",
    actual = "//alpha_common/common_exchange",
)

alias(
    name = "common_ims",
    actual = "//alpha_common/common_ims",
)

alias(
    name = "common_metadata",
    actual = "//alpha_common/common_metadata",
)

alias(
    name = "common_order",
    actual = "//alpha_common/common_order",
)

alias(
    name = "common_platform",
    actual = "//alpha_common/common_platform",
)

alias(
    name = "common_service",
    actual = "//alpha_common/common_service",
)

alias(
    name = "common_trade",
    actual = "//alpha_common/common_trade",
)

###############################################################################
# Components
###############################################################################

alias(
    name = "config_manager",
    actual = "//alpha_components/config_manager",
)

alias(
    name = "environment_manager",
    actual = "//alpha_components/environment_manager",
)

alias(
    name = "pattern_manager",
    actual = "//alpha_components/pattern_manager",
)

###############################################################################
# Datastrucures
###############################################################################

alias(
    name = "ring_buffer",
    actual = "//alpha_datastructures/ring_buffer",
)

alias(
    name = "sliding_window",
    actual = "//alpha_datastructures/sliding_window",
)

###############################################################################
# Errors
###############################################################################

alias(
    name = "common_errors",
    actual = "//alpha_errors/common_errors",
)

alias(
    name = "stream_errors",
    actual = "//alpha_errors/stream_errors",
)

###############################################################################
# Extensions
###############################################################################

alias(
    name = "common_data_bar_ext",
    actual = "//alpha_extensions/common_data_bar_ext",
)

alias(
    name = "common_order_ext",
    actual = "//alpha_extensions/common_order_ext",
)

alias(
    name = "cow_ext",
    actual = "//alpha_extensions/cow_ext",
)

###############################################################################
# Import
###############################################################################

## Core import
##############
alias(
    name = "config_import",
    actual = "//alpha_import/core/config_import",
)

alias(
    name = "integration_import",
    actual = "//alpha_import/core/integration_import",
)

alias(
    name = "metadata_import",
    actual = "//alpha_import/core/metadata_import",
)

alias(
    name = "service_import",
    actual = "//alpha_import/core/service_import",
)

## Kaiko import
##############

alias(
    name = "kaiko_cdn_auth",
    actual = "//alpha_system/mds/kaiko/kaiko_cdn_auth",
)

alias(
    name = "kaiko_download",
    actual = "//alpha_import/kaiko/kaiko_download",
)

alias(
    name = "kaiko_import",
    actual = "//alpha_import/kaiko/kaiko_import",
)

alias(
    name = "kaiko_test_utils",
    actual = "//alpha_import/kaiko/kaiko_test_utils",
    visibility = ["//visibility:public"],
)

## Postgres import
##############

alias(
    name = "pg_import_config",
    actual = "//alpha_import/postgres/pg_import_config",
)

alias(
    name = "pg_import_config_push",
    actual = "//alpha_import/postgres/pg_import_config:push",
)

alias(
    name = "pg_import_integrations",
    actual = "//alpha_import/postgres/pg_import_integrations",
)

alias(
    name = "pg_import_integrations_push",
    actual = "//alpha_import/postgres/pg_import_integrations:push",
)

alias(
    name = "pg_import_metadata",
    actual = "//alpha_import/postgres/pg_import_metadata",
)

alias(
    name = "pg_import_metadata_push",
    actual = "//alpha_import/postgres/pg_import_metadata:push",
)

alias(
    name = "pg_import_services",
    actual = "//alpha_import/postgres/pg_import_services",
)

alias(
    name = "pg_import_services_push",
    actual = "//alpha_import/postgres/pg_import_services:push",
)


alias(
    name = "pg_import_print_utils",
    actual = "//alpha_import/postgres/pg_import_print_utils",
)

###############################################################################
# Infra
###############################################################################

# Postgres
##############
alias(
    name = "pg_cmdb",
    actual = "//alpha_infra/postgres/pg_cmdb",

)

alias(
    name = "pg_cmdb_manager",
    actual = "//alpha_infra/postgres/pg_cmdb_manager",
)

alias(
    name = "pg_imdb",
    actual = "//alpha_infra/postgres/pg_imdb",
)

alias(
    name = "pg_imdb_manager",
    actual = "//alpha_infra/postgres/pg_imdb_manager",
)

alias(
    name = "pg_mddb",
    actual = "//alpha_infra/postgres/pg_mddb",
)

alias(
    name = "pg_mddb_manager",
    actual = "//alpha_infra/postgres/pg_mddb_manager",
)

alias(
    name = "pg_smdb",
    actual = "//alpha_infra/postgres/pg_smdb",
)

alias(
    name = "pg_smdb_manager",
    actual = "//alpha_infra/postgres/pg_smdb_manager",
)

alias(
    name = "postgres_common",
    actual = "//alpha_infra/postgres/postgres_common",
)

alias(
    name = "postgres_config_manager",
    actual = "//alpha_infra/postgres/postgres_config_manager",
)

alias(
    name = "postgres_migrations",
    actual = "//alpha_infra/postgres/postgres_migrations",
)


###############################################################################
# Integration
###############################################################################

# Data Integration
##################

alias(
    name = "binance_coin_futures_data_integration",
    actual = "//alpha_integration/data/binance_coin_futures_data_integration",
)

alias(
    name = "binance_coin_futures_testnet_data_integration",
    actual = "//alpha_integration/data/binance_coin_futures_testnet_data_integration",
)

alias(
    name = "binance_core_data_integration",
    actual = "//alpha_integration/data/binance_core_data_integration",
)

alias(
    name = "binance_spot_data_integration",
    actual = "//alpha_integration/data/binance_spot_data_integration",
)

alias(
    name = "binance_spot_testnet_data_integration",
    actual = "//alpha_integration/data/binance_spot_testnet_data_integration",
)

alias(
    name = "binance_usd_futures_data_integration",
    actual = "//alpha_integration/data/binance_usd_futures_data_integration",
)

alias(
    name = "binance_usd_futures_testnet_data_integration",
    actual = "//alpha_integration/data/binance_usd_futures_testnet_data_integration",
)

###############################################################################
# Proto
###############################################################################

alias(
    name = "proto_cmdb",
    actual = "//alpha_proto/proto_cmdb:proto_cmdb_bindings",
)

alias(
    name = "proto_cmdb_utils",
    actual = "//alpha_proto/proto_cmdb_utils",
)

alias(
    name = "proto_imdb",
    actual = "//alpha_proto/proto_imdb:proto_imdb_bindings",
)

alias(
    name = "proto_imdb_utils",
    actual = "//alpha_proto/proto_imdb_utils",
)

alias(
    name = "proto_mddb",
    actual = "//alpha_proto/proto_mddb:proto_mddb_bindings",
)

alias(
    name = "proto_mddb_utils",
    actual = "//alpha_proto/proto_mddb_utils",
)

alias(
    name = "proto_smdb",
    actual = "//alpha_proto/proto_smdb:proto_smdb_bindings",
)

alias(
    name = "proto_smdb_utils",
    actual = "//alpha_proto/proto_smdb_utils",
)

###############################################################################
# Protocol
###############################################################################

alias(
    name = "binary_protocol",
    actual = "//alpha_protocol/binary_protocol",
)

###############################################################################
# SBE
###############################################################################

alias(
    name = "sbe_bindings",
    actual = "//alpha_sbe/sbe_bindings"
)

alias(
    name = "sbe_messages_client",
    actual = "//alpha_sbe/sbe_messages_client"
)

alias(
    name = "sbe_messages_control",
    actual = "//alpha_sbe/sbe_messages_control"
)

alias(
    name = "sbe_messages_data",
    actual = "//alpha_sbe/sbe_messages_data"
)

alias(
    name = "sbe_messages_order",
    actual = "//alpha_sbe/sbe_messages_order"
)

alias(
    name = "sbe_types",
    actual = "//alpha_sbe/sbe_types"
)

alias(
    name = "sbe_utils",
    actual = "//alpha_sbe/sbe_utils"
)

###############################################################################
# Specs
###############################################################################

# portfolio specs
alias(
    name = "portfolio_specs",
    actual = "//alpha_specs/config_specs/portfolio_specs",
)

alias(
    name = "container_specs_kaiko",
    actual = "//alpha_specs/container_specs/container_specs_kaiko",
)

alias(
    name = "container_specs_postgres",
    actual = "//alpha_specs/container_specs/container_specs_postgres",
)

# DB Specs
alias(
    name = "db_specs_postgres",
    actual = "//alpha_specs/database_specs/db_specs_postgres",
)

# Integration. Specs
alias(
    name = "integration_specs_all",
    actual = "//alpha_specs/integration_specs/integration_specs_all",
)

# Service Specs
alias(
    name = "service_specs_all",
    actual = "//alpha_specs/service_specs/service_specs_all",
)

# Core service specs
alias(
    name = "cmdb_specs",
    actual = "//alpha_system/core/cmdb/cmdb_specs",
)

alias(
    name = "dbgw_specs",
    actual = "//alpha_system/core/dbgw/dbgw_specs",
)

alias(
    name = "smdb_specs",
    actual = "//alpha_system/core/smdb/smdb_specs",
)

alias(
    name = "imdb_specs",
    actual = "//alpha_system/core/imdb/imdb_specs",
)

# MDS service specs
alias(  
    name = "mddb_specs",
    actual = "//alpha_system/mds/mddb/mddb_specs",
)

# Shared service specs
alias(
    name = "shared_service_specs",
    actual = "//alpha_specs/service_specs/shared_service_specs",
)


###############################################################################
# Traits
###############################################################################

alias(
    name = "trait_data_integration",
    actual = "//alpha_traits/trait_data_integration",
)

alias(
    name = "trait_event_consumer",
    actual = "//alpha_traits/trait_event_consumer",
)

alias(
    name = "trait_event_processor",
    actual = "//alpha_traits/trait_event_processor",
)

alias(
    name = "trait_exec_integration",
    actual = "//alpha_traits/trait_exec_integration",
)

###############################################################################
# Transport
###############################################################################

alias(
    name = "alpha_socket",
    actual = "//alpha_transport/alpha_socket",
)

###############################################################################
# Utils
###############################################################################

alias(
    name = "client_utils",
    actual = "//alpha_utils/client_utils",
)

alias(
    name = "crypto_utils",
    actual = "//alpha_utils/crypto_utils",
)

alias(
    name = "encoding_utils",
    actual = "//alpha_utils/encoding_utils",
)

alias(
    name = "math_utils",
    actual = "//alpha_utils/math_utils",
)

###############################################################################
# Utils Tests
###############################################################################

alias(
    name = "iggy_test_utils",
    actual = "//alpha_utils_test/iggy_test_utils",
)