[package]
name = "components"
version = "0.1.0"

edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "components"
path = "src/lib.rs"


[dependencies.common]
path = "../common"
version = "0.1.0"


[dependencies.specs]
path = "../specs"
version = "0.1.0"


[dependencies]
hickory-resolver = { version = "*", default-features = false, features = ["tokio-runtime"] }
serde = { workspace = true }
surrealdb = { workspace = true }
tokio = { workspace = true }
serde_json = "1.0"
futures = "0.3.29"