# Copyright © 2024 Emet Labs Inc. All rights reserved.

load("@rules_license//rules:license.bzl", "license")

# Define the license and export the license file
# see: https://bazelbuild.github.io/rules_license/latest.html
license(
    name = "license",
    package_name = "license",
    copyright_notice = "Copyright © 2024 Emet Labs Inc. All rights reserved.",
    license_kinds = [],
    license_text = "LICENSE",
)

exports_files(["LICENSE"])

