[package]
name = "proto_binding"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "proto_binding"
path = "src/lib.rs"


[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }


[build-dependencies]
tonic-build = { workspace = true }
