filegroup(
    name = "build",
    srcs = [
        "//queng_cli/data_importer:import_symbols",
        "//queng_cli/data_importer:import_trade_data",
        "//queng_cli/spec_manager:spec_manager",
        "//queng_cli/smdb_manager:smdb_manager",
    ],
    visibility = ["//visibility:public"],
)

