load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test_suite")
load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test")


rust_library(
    name = "common",
    crate_root = "src/lib.rs",
    srcs = glob([
        "src/**",
    ]),
    deps = [
          # External crates
          "@crate_index//:chrono",
          "@crate_index//:rust_decimal",
          "@crate_index//:serde",
          "@crate_index//:serde_json",
    ],
    proc_macro_deps = [
          "@crate_index//:rust_decimal_macros",
    ],
    visibility = ["//visibility:public"],
)


rust_test_suite(
    name = "tests",
    srcs = glob([
        "tests/errors/*_tests.rs",
        "tests/types/*/*_tests.rs",
    ]),
    deps = [
      # Crate to test
      ":common",
      # External crates
      "@crate_index//:chrono",
      "@crate_index//:rust_decimal",
      "@crate_index//:serde",
      "@crate_index//:serde_json",
    ],
    tags = ["unit","common"],
    visibility = ["//visibility:public"],
)

rust_doc(
    name = "doc",
    crate = ":common",
    visibility = ["//visibility:public"],
)

rust_doc_test(
     name = "doc_test",
     crate = ":common",
     visibility = ["//visibility:public"],
 )

