load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library", "rust_test_suite")

rust_library(
    name = "common",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/lib.rs",
    proc_macro_deps = [
        "@crates//:rust_decimal_macros",
    ],
    tags = ["common"],
    visibility = ["//visibility:public"],
    deps = [
        # External crates
        "@crates//:chrono",
        "@crates//:rust_decimal",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_doc(
    name = "doc",
    crate = ":common",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":common",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)

rust_test_suite(
    name = "common_error_tests",
    srcs = glob([
        "tests/errors/*_tests.rs",
    ]),
    tags = [
        "common",
        "unit",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Crate to test
        ":common",
        # External crates
        "@crates//:chrono",
        "@crates//:rust_decimal",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test_suite(
    name = "common_config_tests",
    srcs = glob([
        "tests/types/config_types/*_tests.rs",
    ]),
    tags = [
        "common",
        "unit",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Crate to test
        ":common",
        # External crates
        "@crates//:chrono",
        "@crates//:rust_decimal",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test_suite(
    name = "common_currency_tests",
    srcs = glob([
        "tests/types/currency_types/*_tests.rs",
    ]),
    tags = [
        "common",
        "unit",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Crate to test
        ":common",
        # External crates
        "@crates//:chrono",
        "@crates//:rust_decimal",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test_suite(
    name = "common_data_tests",
    srcs = glob([
        "tests/types/data_types/*_tests.rs",
    ]),
    tags = [
        "common",
        "unit",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Crate to test
        ":common",
        # External crates
        "@crates//:chrono",
        "@crates//:rust_decimal",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test_suite(
    name = "common_exchanges_tests",
    srcs = glob([
        "tests/types/exchange_types/*_tests.rs",
    ]),
    tags = [
        "common",
        "unit",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Crate to test
        ":common",
        # External crates
        "@crates//:chrono",
        "@crates//:rust_decimal",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test_suite(
    name = "common_file_tests",
    srcs = glob([
        "tests/types/file_types/*_tests.rs",
    ]),
    tags = [
        "common",
        "unit",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Crate to test
        ":common",
        # External crates
        "@crates//:chrono",
        "@crates//:rust_decimal",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test_suite(
    name = "common_meta_data_tests",
    srcs = glob([
        "tests/types/meta_data_types/*_tests.rs",
    ]),
    tags = [
        "common",
        "unit",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Crate to test
        ":common",
        # External crates
        "@crates//:chrono",
        "@crates//:rust_decimal",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test_suite(
    name = "common_pattern_tests",
    srcs = glob([
        "tests/types/pattern_types/*_tests.rs",
    ]),
    tags = [
        "common",
        "unit",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Crate to test
        ":common",
        # External crates
        "@crates//:chrono",
        "@crates//:rust_decimal",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test_suite(
    name = "common_portfolio_tests",
    srcs = glob([
        "tests/types/portfolio_types/*_tests.rs",
    ]),
    tags = [
        "common",
        "unit",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Crate to test
        ":common",
        # External crates
        "@crates//:chrono",
        "@crates//:rust_decimal",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test_suite(
    name = "common_symbol_tests",
    srcs = glob([
        "tests/types/symbol_types/*_tests.rs",
    ]),
    tags = [
        "common",
        "unit",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Crate to test
        ":common",
        # External crates
        "@crates//:chrono",
        "@crates//:rust_decimal",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test_suite(
    name = "common_trade_tests",
    srcs = glob([
        "tests/types/trade_types/*_tests.rs",
    ]),
    tags = [
        "common",
        "unit",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Crate to test
        ":common",
        # External crates
        "@crates//:chrono",
        "@crates//:rust_decimal",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)
