filegroup(
    name = "build",
    srcs = [
        "//queng_components/config_manager:config_manager",
        "//queng_components/ctx_manager:ctx_manager",
        "//queng_components/db_query_manager:db_query_manager",
        "//queng_components/dns_manager:dns_manager",
        "//queng_components/pattern_manager:pattern_manager",
        "//queng_components/symbol_manager:symbol_manager",
        ],
    visibility = ["//visibility:public"],
)

