load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust//proto/prost:defs.bzl", "rust_prost_library")


proto_library(
    name = "proto_bindings",
    srcs = [
          "proto_bazel/cmdb.proto",
          "proto_bazel/dbgw.proto",
          "proto_bazel/ims_data.proto",
          "proto_bazel/smdb.proto",
          "proto_bazel/symdb.proto",
          "proto_bazel/data_messages.proto",
          "proto_bazel/portfolio_messages.proto",
          "proto_bazel/service_messages.proto",
          "proto_bazel/exchange_symbol_messages.proto",
    ],
    visibility = ["//visibility:public"],
)

rust_prost_library(
    name = "rust_proto",
    proto = ":proto_bindings",
    visibility = ["//visibility:public"],
)
