load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust//proto/prost:defs.bzl", "rust_prost_library")

proto_library(
    name = "proto_bindings",
    srcs = [
        "proto/cmdb.proto",
        "proto/dbgw.proto",
        "proto/ims_data.proto",
        "proto/mdm.proto",
        "proto/portfolio_messages.proto",
        "proto/service_messages.proto",
        "proto/smdb.proto",
    ],
    # strip_import_prefix ensures compatibility with Cargo / Prost proto imports
    # https://bazel.build/reference/be/protocol-buffer
    strip_import_prefix = "proto",
)

rust_prost_library(
    name = "rust_proto",
    proto = ":proto_bindings",
    visibility = ["//visibility:public"],
)
