filegroup(
    name = "build",
    srcs = [
        "//queng_sbe/bindings:sbe_bindings",
        "//queng_sbe/sbe_messages:sbe_messages",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "doc",
    srcs = [
        "//queng_sbe/bindings:doc",
        "//queng_sbe/sbe_messages:doc",
    ],
    visibility = ["//visibility:public"],
)
