load("@rules_multirun//:defs.bzl", "command", "multirun")

filegroup(
    name = "image",
    srcs = [
        "//queng_services/aux/file_server:image",
        "//queng_services/cmdb:image",
        "//queng_services/dbgw:image",
        "//queng_services/mddb:image",
        "//queng_services/smdb:image",
    ],
    visibility = ["//visibility:public"],
)

multirun(
    name = "push",
    commands = [
        "push_file_server",
        "push_cmdb",
        "push_dbgw",
        "push_mddb",
        "push_smdb",
    ],
    jobs = 0, # Set to 0 to run in parallel, 1 sets to sequential
    visibility = ["//visibility:public"],
)

command(
    name = "push_file_server",
    command = "//queng_services/aux/file_server:push",
    arguments = [], # Optional arguments passed directly to the tool
)

command(
    name = "push_cmdb",
    command = "//queng_services/cmdb:push",
    arguments = [], # Optional arguments passed directly to the tool
)

command(
    name = "push_dbgw",
    command = "//queng_services/dbgw:push",
    arguments = [], # Optional arguments passed directly to the tool
)

command(
    name = "push_mddb",
    command = "//queng_services/mddb:push",
    arguments = [], # Optional arguments passed directly to the tool
)

command(
    name = "push_smdb",
    command = "//queng_services/smdb:push",
    arguments = [], # Optional arguments passed directly to the tool
)
