load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

filegroup(
    name = "build",
    srcs = [
        "//queng_specs/db_specs:db_specs",
        "//queng_specs/exchange_specs:exchange_specs",
        "//queng_specs/file_specs:file_specs",
        "//queng_specs/service_specs:service_specs",
    ],
    visibility = ["//visibility:public"],
)

