
filegroup(
    name = "build",
    srcs = [
        "//queng_specs/container_specs:container_specs",
        "//queng_specs/db_specs:db_specs",
        "//queng_specs/exchange_specs:exchange_specs",
        "//queng_specs/file_specs:file_specs",
        "//queng_specs/service_specs:build",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "doc",
    srcs = [
        "//queng_specs/container_specs:doc",
        "//queng_specs/db_specs:doc",
        "//queng_specs/exchange_specs:doc",
        "//queng_specs/file_specs:doc",
        "//queng_specs/service_specs:doc",
    ],
    visibility = ["//visibility:public"],
)


