# Make all aliases public by default
package(default_visibility = ["//visibility:public"])

###############################################################################
# Core Clients
###############################################################################

alias(
    name = "cmdb_client",
    actual = "//queng_services/core/cmdb/cmdb_client",
)

alias(
    name = "dbgw_smdb_client",
    actual = "//queng_services/core/dbgw/dbgw_client/dbgw_smdb_client",
)

alias(
    name = "dbgw_cmdb_client",
    actual = "//queng_services/core/dbgw/dbgw_client/dbgw_cmdb_client",
)

alias(
    name = "smdb_client",
    actual = "//queng_services/core/smdb/smdb_client",
)

###############################################################################
# MDS Clients
###############################################################################

alias(
    name = "kaiko_client",
    actual = "//queng_services/mds/kaiko/kaiko_client",
)

alias(
    name = "mddb_client",
    actual = "//queng_services/mds/mddb/mddb_client",
)

###############################################################################
# IMS Clients
###############################################################################

alias(
    name = "imdb_client",
    actual = "//queng_services/ims/imdb/imdb_client",
)

alias(
    name = "ims_data_client",
    actual = "//queng_services/ims/ims_clients/ims_data_client",
)

alias(
    name = "binance_client",
    actual = "//queng_services/ims/ims_clients/binance_client",
)

alias(
    name = "rest_client",
    actual = "//queng_services/ims/ims_clients/rest_client",
)

