# Make all aliases public by default
package(default_visibility = ["//visibility:public"])

###############################################################################
# Core Clients
###############################################################################

alias(
    name = "cmdb_client",
    actual = "//queng_system_core/cmdb/cmdb_client",
)

alias(
    name = "imdb_client",
    actual = "//queng_system_core/imdb/imdb_client",
)

alias(
    name = "smdb_client",
    actual = "//queng_system_core/smdb/smdb_client",
)

###############################################################################
# MDS Clients
###############################################################################

alias(
    name = "kaiko_client",
    actual = "//queng_system_mds/kaiko/kaiko_client",
)

alias(
    name = "mddb_client",
    actual = "//queng_system_mds/mddb/mddb_client",
)

###############################################################################
# IMS Clients
###############################################################################


alias(
    name = "ims_data_client",
    actual = "//queng_system_ims_clients/ims_data_client",
)

