# Make all aliases public by default
package(default_visibility = ["//visibility:public"])

###############################################################################
# Core Clients
###############################################################################

alias(
    name = "cmdb_client",
    actual = "//alpha_system/core/cmdb/cmdb_client",
)

alias(
    name = "imdb_client",
    actual = "//alpha_system/core/imdb/imdb_client",
)

alias(
    name = "smdb_client",
    actual = "//alpha_system/core/smdb/smdb_client",
)

###############################################################################
# MDS Clients
###############################################################################

alias(
    name = "mddb_client",
    actual = "//alpha_system/mds/mddb/mddb_client",
)
