# Make all aliases public by default
package(default_visibility = ["//visibility:public"])

###############################################################################
# Core Services
###############################################################################

# The service aliases are used in scripts/run_*.sh to start each service
alias(
    name = "cmdb",
    actual = "//queng_services/core/cmdb/cmdb_service:cmdb",
)

# The push aliases are used in the root folder BUILD file to build & push containers
alias(
    name = "cmdb_push",
    actual = "//queng_services/core/cmdb/cmdb_service:push",
)

alias(
    name = "dbgw",
    actual = "//queng_services/core/dbgw/dbgw_service:dbgw",
)

alias(
    name = "dbgw_push",
    actual = "//queng_services/core/dbgw/dbgw_service:push",
)


alias(
    name = "smdb",
    actual = "//queng_services/core/smdb/smdb_service:smdb",
)

alias(
    name = "smdb_push",
    actual = "//queng_services/core/smdb/smdb_service:push",
    visibility = ["//visibility:public"],
)

###############################################################################
# IMS Data Services
###############################################################################

alias(
    name = "mddb",
    actual = "//queng_services/ims/mddb/mddb_service:mddb",
    visibility = ["//visibility:public"],
)

alias(
    name = "mddb_push",
    actual = "//queng_services/ims/mddb/mddb_service:push",
)

alias(
    name = "binance_data",
    actual = "//queng_services/ims/ims_data/binance_data:binance_data",
)

alias(
    name = "binance_data_push",
    actual = "//queng_services/ims/ims_data/binance_data:push",
)

alias(
    name = "ims_common",
    actual = "//queng_services/ims/ims_common",
)


###############################################################################
# Template
###############################################################################

alias(
    name = "grpc_service",
    actual = "//queng_services/templete/grpc_service",
)
